--- a/src/md_motor_interface_msgs/CMakeLists.txt
+++ b/src/md_motor_interface_msgs/CMakeLists.txt
@@ -9,28 +9,27 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-
 find_package(ament_cmake REQUIRED)
 find_package(builtin_interfaces REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
-
 set(msg_files
   "msg/MdRobotMsg1.msg" 
   "msg/MdRobotMsg2.msg" 
-  "msg/Pose.msg" 
-  )
+  "msg/Pose.msg"
+)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${msg_files}
   DEPENDENCIES builtin_interfaces
 )
 
+rosidl_get_typesupport_target(cpp_typesupport_target ${PROJECT_NAME} "rosidl_typesupport_cpp")
+ament_export_dependencies(rosidl_default_runtime)
+
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  
   set(ament_cmake_copyright_FOUND TRUE)
-
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
